--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -3,9 +3,28 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 0 10px;
   grid-auto-rows: 10px;
+  flex-direction: row;
 }
 
 .image-list img {
   width: 250px;
   grid-row-end: span 2;
+}
+/* .center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+} */
+
+@media (max-width: 576px) {
+  .image-list {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 3vh;
+  }
 }
