--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,9 +1,8 @@
 .image-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 0 10px;
+  grid-gap: 4 10px;
   grid-auto-rows: 10px;
-  flex-direction: row;
 }
 
 .image-list img {
@@ -20,11 +19,9 @@
 
 @media (max-width: 576px) {
   .image-list {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    gap: 3vh;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 10px;
+    grid-auto-rows: 0px;
   }
 }
